--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -15,13 +15,13 @@
     <item
         android:id="@+id/menu_share"
         android:showAsAction="always|withText"
-        android:title="@string/refreshBtnLabel"
+        android:title="@string/shareBtnLabel"
         android:icon="@drawable/social_share"
         />
     <item
         android:id="@+id/menu_create"
         android:showAsAction="always|withText"
-        android:title="@string/refreshBtnLabel"
+        android:title="@string/createBtnLabel"
         android:icon="@drawable/content_new"
         />
     <item
