--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -3,12 +3,31 @@
     <EditTextPreference
         android:key="pref_alias"
         android:title="@string/aliasLabel"
+        android:summary="@string/aliasSummary"
         android:defaultValue="@string/anonLabel"
         />
     <CheckBoxPreference
-        android:key="pref_tor"
+        android:key="pref_enable_tor"
+        android:title="@string/enableTorLabel"
+        android:summary="@string/enableTorSummary"
+        android:defaultValue="false"
+        />
+    <CheckBoxPreference
+        android:key="pref_require_tor"
         android:title="@string/requireTorLabel"
         android:summary="@string/requireTorSummary"
         android:defaultValue="false"
+        />
+    <EditTextPreference
+        android:key="pref_tor_host"
+        android:title="@string/proxyHostLabel"
+        android:summary="@string/proxyHostSummary"
+        android:defaultValue="@string/localhostLabel"
+        />
+    <EditTextPreference
+        android:key="pref_tor_port"
+        android:title="@string/proxyPortLabel"
+        android:summary="@string/proxyPortSummary"
+        android:defaultValue="@string/proxyPortDefault"
         />
 </PreferenceScreen>
