--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -32,22 +32,14 @@
         />
     <item
         android:id="@+id/menu_search"
-        android:showAsAction="withText"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/searchBtnLabel"
         android:icon="@drawable/action_search"
         />
     <item
         android:id="@+id/menu_help"
-        android:showAsAction="withText"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/helpBtnLabel"
         android:icon="@drawable/action_help"
         />
-    <!--
-    <item
-        android:id="@+id/menu_about"
-        android:showAsAction="never"
-        android:title="@string/aboutBtnLabel"
-        android:icon="@drawable/action_about"
-        />
-    -->
 </menu>
