--- a/res/values/defaults.xml
+++ b/res/values/defaults.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="anonLabel">Anonymous</string>
     <string name="aliasSummary">%s</string>
+    <string name="dispersyPortSummary">%s</string>
+	<string name="dispersyPortDefault">12345</string>
     <string name="localhostLabel">localhost</string>
     <string name="proxyHostSummary">%s</string>
     <string name="proxyPortDefault">9050</string>
