--- a/res/layout/community_new.xml
+++ b/res/layout/community_new.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="@string/communityNameLabel"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
@@ -37,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:text="@string/communityDescriptionLabel"
         android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
