--- a/res/values/strings-tgs.xml
+++ b/res/values/strings-tgs.xml
@@ -44,7 +44,7 @@
     <string name="proxyPortLabel">Proxy Port</string>
     <string name="dispersySettingsLabel">Dispersy</string>
     <string name="enableDispersyLabel">Enable Dispersy</string>
-    <string name="enableDispersySummary">Enable the Dispersy P2P engine.</string>
+    <string name="enableDispersySummary">Enable the Dispersy P2P engine</string>
     <string name="dispersyPortLabel">Dispersy Port</string>
     
     <string name="aboutHeader">This application streams video via P2P.
