--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -18,7 +18,6 @@
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/b_continue"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="36dp" >
     </LinearLayout>
@@ -29,6 +28,7 @@
         android:layout_height="102dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:contentDescription="@string/image_desc"
         android:src="@drawable/all_logos" />
 
     <TextView
