--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-        <item type="id" name="surface_view" />
+    <item type="id" name="menu_help" />
+    <item type="id" name="surface_view" />
 </resources>
