--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-        <EditTextPreference
-            android:key="pref_alias"
-            android:title="@string/aliasLabel"
-            android:summary="@string/aliasSummary"
-            android:defaultValue="@string/anonLabel"
-            />
+    <!-- alias -->
+    <EditTextPreference
+        android:key="pref_alias"
+        android:title="@string/aliasLabel"
+        android:summary="@string/aliasSummary"
+        android:defaultValue="@string/anonLabel"
+        />
+    
+    <!-- manage squares -->
+        
+    <!-- clear search history -->
+    
+    <!--  clear cache -->
+    
+    <!--  clear private storage -->
+    
+    <!-- TOANFO -->
+    
 </PreferenceScreen>
