--- a/res/xml/proxy_settings.xml
+++ b/res/xml/proxy_settings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- enable proxy -->
 	    <CheckBoxPreference
 	        android:key="pref_enable_proxy"
 	        android:title="@string/enableProxyLabel"
 	        android:summary="@string/enableProxySummary"
 	        android:defaultValue="false"
 	        />
-	    <!--
+	    
+	    <!-- require proxy
 	    <CheckBoxPreference
 	        android:key="pref_require_proxy"
 	        android:title="@string/requireProxyLabel"
@@ -15,6 +17,8 @@
 	        android:dependency="pref_enable_proxy"
 	        />
 	    -->
+	    
+	    <!-- proxy host name -->
 	    <EditTextPreference
 	        android:key="pref_proxy_host"
 	        android:title="@string/proxyHostLabel"
@@ -22,6 +26,8 @@
 	        android:defaultValue="@string/localhostLabel"
 	        android:dependency="pref_enable_proxy"
 	        />
+	    
+	    <!-- proxy port number -->
 	    <EditTextPreference
 	        android:key="pref_proxy_port"
 	        android:title="@string/proxyPortLabel"
@@ -29,4 +35,5 @@
 	        android:defaultValue="@string/proxyPortDefault"
 	        android:dependency="pref_enable_proxy"
 	        />
+	    
 </PreferenceScreen>
