--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -2,37 +2,37 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/menu_compose"
-        android:showAsAction="always|withText"
+        android:showAsAction="always"
         android:title="@string/composeBtnLabel"
         android:icon="@drawable/content_edit"
         />
     <item
         android:id="@+id/menu_refresh"
-        android:showAsAction="always|withText"
+        android:showAsAction="always"
         android:title="@string/refreshBtnLabel"
         android:icon="@drawable/navigation_refresh"
         />
     <item
         android:id="@+id/menu_share"
-        android:showAsAction="always|withText"
+        android:showAsAction="always"
         android:title="@string/shareBtnLabel"
         android:icon="@drawable/social_share"
         />
     <item
         android:id="@+id/menu_create"
-        android:showAsAction="always|withText"
+        android:showAsAction="always"
         android:title="@string/createBtnLabel"
         android:icon="@drawable/content_new"
         />
     <item
         android:id="@+id/menu_settings"
-        android:showAsAction="ifRoom|withText"
+        android:showAsAction="ifRoom"
         android:title="@string/settingsBtnLabel"
         android:icon="@drawable/action_settings"
         />
     <item
         android:id="@+id/menu_search"
-        android:showAsAction="withText"
+        android:showAsAction="ifRoom"
         android:title="@string/searchBtnLabel"
         android:icon="@drawable/action_search"
         />
