--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
+        android:id="@+id/menu_close"
+        android:showAsAction="always"
+        android:title="@string/closeBtnLabel"
+        android:icon="@drawable/navigation_cancel"
+        />
+    <item
         android:id="@+id/menu_compose"
         android:showAsAction="always"
         android:title="@string/composeBtnLabel"
