--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -8,6 +8,8 @@
         android:defaultValue="@string/anonLabel"
         />
     
+    <!-- default tab -->
+    
     <!--  clear cache -->
     
     
