--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -7,9 +7,17 @@
     >
     
     <!-- main fragment "tab group" -->
+    <!--
     <android.support.v4.view.ViewPager
         android:id="@+id/mainActivityPager"
         android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        />
+    -->
+    
+    <fragment android:id="@+id/mainContentFragment"
+        android:layout_width="0dip"
         android:layout_height="0dip"
         android:layout_weight="1"
         />
