--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -6,18 +6,9 @@
     android:background="@android:color/white"
     >
     
-    <!-- main fragment "tab group" -->
-    <!--
-    <android.support.v4.view.ViewPager
-        android:id="@+id/mainActivityPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        />
-    -->
-    
     <fragment android:id="@+id/mainContentFragment"
-        android:layout_width="0dip"
+        android:name="org.theglobalsquare.ui.OverviewListFragment"
+        android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
         />
