--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -8,7 +8,13 @@
         android:defaultValue="@string/anonLabel"
         />
     
-    <!-- default tab -->
+    <!-- enable monitor -->
+    <CheckBoxPreference
+        android:key="pref_enable_monitor"
+        android:title="@string/enableMonitorLabel"
+        android:summary="@string/enableMonitorSummary"
+        android:defaultValue="false"
+        />
     
     <!--  clear cache -->
     
