--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -8,6 +8,7 @@
     
     <fragment android:id="@+id/mainContentFragment"
         android:name="org.theglobalsquare.ui.OverviewListFragment"
+        android:tag="overview"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
