--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -7,8 +7,8 @@
     >
     
     <fragment android:id="@+id/mainContentFragment"
-        android:name="org.theglobalsquare.ui.OverviewListFragment"
-        android:tag="overview"
+        android:name="org.theglobalsquare.ui.Backstop"
+        android:tag="backstop"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
